--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,7 @@
 PORT=8080
-MONGO_URL="mongodb://localhost:27017/linkup"
+CLIENT_URL="http://localhost:3000"
+ENVIROMENT='dev'
+DB_HOST='localhost'
+DB_USER='scottsmyth'
+DB_PASS='123'
+DB_NAME='linkup'
