--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.2",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.6.0"
+    "pg": "^8.9.0",
+    "socket.io": "^4.6.0",
+    "validator": "^13.9.0"
   }
 }
