added pusher logic to backend and frontend to synchronize messages

--- a/backend/.env
+++ b/backend/.env
@@ -5,4 +5,4 @@ DB_HOST='localhost'
 DB_USER='scottsmyth'
 DB_PASS='123'
 DB_NAME='linkup'
-MONGO_URL="mongodb://localhost:27017/linkup"
+MONGO_URL="mongodb+srv://ssmythw:Ha1992@cluster0.itfxqyr.mongodb.net/?retryWrites=true&w=majority"
