--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,10 @@
     "pusher-js": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
-    "redux": "^4.2.1",
-    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
