--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^3.0.1",
     "pusher-js": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
