--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "emoji-picker-react": "^4.4.7",
     "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.1",
     "pusher-js": "^8.0.1",
